--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
-    
   },
   "author": "senac",
   "license": "ISC",
@@ -23,6 +22,7 @@
     "mongoose": "^5.2.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react-modal": "^3.5.1",
     "validator": "^10.4.0"
   },
   "devDependencies": {
